# DisclosureAnalyst

./: .gitignore  LICENSE  README.md  build_app.py  pyproject.toml  requirements.txt  run_app.py
disclosure_analyst/: analyzer.py  extractor.py  gui.py  report.py
docs/: DESIGN.md
